compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__tuple_int.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 425
expression: "let #(a, b) = 1"
snapshot_kind: text
---
----- SOURCE CODE
let #(a, b) = 1

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:5
  │
1 │ let #(a, b) = 1
  │     ^^^^^^^

Expected type:

    Int

Found type:

    #(a, b)
